[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/temp-warrior.png" type="Texture" id=1]
[ext_resource path="res://Mob.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 365.464

[node name="Mob" type="Area2D"]
position = Vector2( 472, 246 )
scale = Vector2( 0.17, 0.17 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Mob_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Mob_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
